# extension-template

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
docs/: Serial-Connection.md
examples/common-scripts/: make-extension-lvm  make-extension-ubi  pkg-dev.sh
examples/hello_world-go-extension/: README.md  bsext_init  go.mod  main.go
examples/hello_world-js-extension/: README.md  package.json  webpack.config.js
examples/hello_world-js-extension/src/: config.js  index.js
examples/hello_world-ts-extension/: README.md  package.json  tsconfig.json  webpack.config.js
examples/hello_world-ts-extension/player-app/: autorun.brs
examples/hello_world-ts-extension/src/: config.ts  index.ts
examples/time_publisher-cpp-extension/: CMakeLists.txt  README.md
examples/time_publisher-cpp-extension/src/: main.cpp
plans/: generalize.md  pg.md
sh/: bsext_init  make-extension-lvm  make-extension-ubi  pkg-dev.sh  start-ext.sh
spells/: Serial-Connection.md  Un-Secure-Player.md
src/: main.cpp
